# falgit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/falgit/: __init__.py  cli.py  errors.py  repo.py
src/falgit/core/: apply.py  diff.py  snapshot.py
src/falgit/meta/: schema.py  store.py
src/falgit/models/: types.py
tests/: conftest.py  test_cli.py  test_diff.py  test_repo.py  test_snapshot.py
